libdebian-installer (0.52) UNRELEASED; urgency=low

  [ Joey Hess ]
  * Move one more resolver debug message to ENABLE_EXTENSIVE_DEBUG.

  [ Martin Michlmayr ]
  * Match SGI O2 machines with 300MHz RM5200SC (Nevada) CPUs.

 -- Joey Hess <joeyh@debian.org>  Wed, 09 May 2007 14:55:33 -0400

libdebian-installer (0.51) unstable; urgency=low

  * archdetect: Add the i386/mac and amd64/mac platforms, using reduced code
    from dmidecode.

 -- Colin Watson <cjwatson@debian.org>  Sun, 08 Apr 2007 22:09:41 +0100

libdebian-installer (0.50) unstable; urgency=low

  [ Joey Hess ]
  * Add back subarch-armeb-linux.c, and modify the Makefile to include it,
    so it's used after all.
  * Add support for armel.

 -- Frans Pop <fjp@debian.org>  Thu, 22 Feb 2007 12:11:32 +0100

libdebian-installer (0.49) unstable; urgency=low

  [ Joey Hess ]
  * Remove subarch-armeb-linux.c, which was never used. subarch-arm-linux.c
    is used for all arm variants.

 -- Frans Pop <fjp@debian.org>  Sun, 18 Feb 2007 13:44:15 +0100

libdebian-installer (0.48) unstable; urgency=low

  [ Sven Luther ]
  * Added support for Efika /proc/cpuinfo machine field. Closes: #403293.

 -- Frans Pop <fjp@debian.org>  Tue, 13 Feb 2007 23:24:24 +0100

libdebian-installer (0.47) unstable; urgency=low

  * Fix FTBFS on mips/mipsel.

 -- Thiemo Seufer <ths@debian.org>  Wed, 22 Nov 2006 15:59:38 +0000

libdebian-installer (0.46) unstable; urgency=low

  [ Thiemo Seufer ]
  * archdetect: Add mips/qemu-mips32 and mipsel/qemu-mips32.

  [ Colin Watson ]
  * include/debian-installer/macros.h: Add DI_GNUC_PREREQ macro useful for
    making use of __attribute__ in various places throughout d-i.

 -- Frans Pop <fjp@debian.org>  Wed, 22 Nov 2006 15:06:29 +0100

libdebian-installer (0.45) unstable; urgency=low

  * archdetect: Add the ARM Versatile platform.
  * archdetect: Return ixp4xx rather than nslu2 on Linksys NSLU2 since
    the NSLU2-specific flavour is no longer needed.
