@@ -6,6 +6,9 @@ libdebian-installer (0.52) UNRELEASED; urgency=low
   [ Martin Michlmayr ]
   * Match SGI O2 machines with 300MHz RM5200SC (Nevada) CPUs.
 
+  [ Colin Watson ]
+  * archdetect: Add the powerpc/ps3 platform.
+
  -- Joey Hess <joeyh@debian.org>  Wed, 09 May 2007 14:55:33 -0400
 
 libdebian-installer (0.51) unstable; urgency=low
